--- a/a1/style/design.css
+++ b/a1/style/design.css
@@ -1,20 +1,21 @@
 
 body {
+	color: #333333;
 	font-family: "ＭＳ Ｐゴシック", Osaka, sans-serif;
 	padding: 0px;
 	margin: 0px;
-	background-color: #000066;
+	background-color: #006633;
+	background-image: url(../img/bg.gif);
 }
 
 #wrap {
-	line-height: 1.5em;
-	color: #333333;
 	background-color: #FFFFFF;
+	line-height: 1.5em;
 	width: 690px;
 	padding: 5px;
 	margin: 0px auto;
 	border: 1px solid #333333;
-	background-image: url(img/b2.gif);
+	background-image: url(../img/bd.gif);
 }
 
 #header {
@@ -25,11 +26,13 @@ body {
 
 #global_navi {
 	padding: 0px;
-	margin: 5px 0px;
+	margin: 5px 0px 10px;
 }
 
-#content {
-	background-color: #CCCCCC;
+#content:after {
+	content: "";
+	display: block;
+	clear: both;
 }
 
 #side_navi {
@@ -52,18 +55,31 @@ body {
 #footer {
 	clear: both;
 	text-align: center;
-	padding: 10px;
-	margin-top: 10px;
-	border-top: 1px solid #666666;
-	border-bottom: 1px solid #666666;
+	background-color:#060;
+	padding: 5px 10px;
+}
+
+#footer a:link,#footer a:visited,#footer a:hover {
+	color: #FFFFFF;
+}
+
+#footer a:link {
+	text-decoration: underline;
+}
+
+#footer a:hover {
+	text-decoration: none;
 }
 
 h1 {
 	font-size: 11pt;
-	margin: 10px 0px;
-	padding: 0px;
+	margin: 0px 0px 1em;
+	padding: 10px;
 	clear: both;
-	border-bottom: 1px solid #3366CC;
+	border-top: 1px solid #060;
+	border-right: 1px solid #060;
+	border-bottom: 1px solid #060;
+	border-left: 10px solid #060;
 }
 
 h2 {
@@ -109,6 +125,10 @@ a:visited {
 	color: #9966CC;
 }
 
+a:hover {
+	text-decoration: underline;
+}
+
 #side_navi ul {
 	text-indent: 0px;
 	margin: 0px;
@@ -118,9 +138,8 @@ a:visited {
 #side_navi li {
 	font-size: 9pt;
 	line-height: 2em;
-	color: #333333;
 	margin: 8px 0px;
-	background-image: url(img/ar.gif);
+	background-image: url(../img/sign.gif);
 	background-repeat: no-repeat;
 	list-style-type: none;
 	text-indent: 24px;
@@ -128,33 +147,7 @@ a:visited {
 	border-bottom: 1px dotted #999999;
 }
 
-.clear_float {
-	clear: both;
-	float: none;
-}
-
 .copyrights {
 	font-size: 8pt;
 	color: #FFFFFF;
-}
-
-.float_left {
-	float: left;
-	margin-right: 10px;
-	margin-top: 0px;
-	margin-bottom: 10px;
-	margin-left: 0px;
-}
-
-.center {
-	text-align: center;
-}
-
-.right {
-	text-align: right;
-}
-
-em {
-	font-weight: bold;
-	font-style: normal;
 }
