--- a/a4/design.css
+++ b/a4/design.css
@@ -77,6 +77,8 @@ h1 {
 	border-bottom: 1px solid #030;
 	border-left: 10px solid #030;
 	margin: 0px 0px 15px;
+	background-color:#663366;
+	color:#ffffff;
 }
 
 h2 {
