--- a/a5/design.css
+++ b/a5/design.css
@@ -6,6 +6,7 @@ body {
 	padding: 0px;
 	margin: 0px;
 	background-color: #FFFFFF;
+	background-image: url(img/b2.gif);
 }
 
 #wrap {
@@ -14,6 +15,7 @@ body {
 	padding: 5px;
 	margin: 0px auto;
 	border: 1px solid #333333;
+	background-image: url(img/c4.gif);
 }
 
 #header {
